pulled config type out into its own file

--- a/go/model/Makefile
+++ b/go/model/Makefile
@@ -3,6 +3,7 @@ include $(GOROOT)/src/Make.$(GOARCH)
 TARG=fig/model
 GOFILES=\
 	backtrace.go\
+	config.go\
 	descriptor.go\
 	modifiers.go\
 	package.go\
