--- a/go/parser/Makefile
+++ b/go/parser/Makefile
@@ -1,7 +1,8 @@
 include $(GOROOT)/src/Make.$(GOARCH)
 
-TARG=fig/plan
+TARG=fig/parser
 GOFILES=\
 	parser.go\
+	unparser.go\
 
 include $(GOROOT)/src/Make.pkg
