initial work on 'publish' command

--- a/go/Makefile
+++ b/go/Makefile
@@ -7,8 +7,11 @@ GOFILES=\
 	cmd_help.go\
 	cmd_install.go\
 	cmd_list.go\
+	cmd_publish.go\
 	cmd_show.go\
 	cmd_tree.go\
+	fs.go\
+	fs_mem.go\
 	graph_cycles.go\
 	graph_node.go\
 	graph_sort.go\
@@ -18,6 +21,8 @@ GOFILES=\
 	parser.go\
 	unparser.go\
 	plan.go\
+	workspace.go\
+	workspace_file.go\
 	workspace_mem.go\
 	backtrace.go\
 	builder.go\
@@ -27,9 +32,14 @@ GOFILES=\
 	package.go\
 
 fig: main.$(O) _obj/fig.a
-	$(LD) -L _obj main.$(O)
+	$(LD) -o fig -L _obj main.$(O) 
 
 main.$(O): main.go _obj/fig.a
 	$(GC) -I _obj main.go
 
+func_test: fig func_test.go
+	$(GC) func_test.go
+	$(LD) func_test.$(O) 
+	./6.out
+	
 include $(GOROOT)/src/Make.pkg
